@@ -399,16 +399,16 @@ Funktionen sind zur Zeit deshalb nicht möglich.',
 "savearticle"	=> "Artikel speichern",
 "preview"	=> "Vorschau",
 "showpreview"	=> "Vorschau zeigen",
-"showdiff"	=> "&Auml;nderungen zeigen",
+"showdiff"	=> "Änderungen zeigen",
 "blockedtitle"	=> "Benutzer ist blockiert",
 "blockedtext"	=> "Ihr Benutzername oder Ihre IP-Adresse wurde von $1 blockiert.
 Als Grund wurde angegeben:<br />$2<p>Bitte kontaktieren Sie den Administrator, um über die Blockierung zu sprechen.",
-"whitelistedittitle" => "Zum Bearbeiten ist es erforderlich angemeldet zu sein",
-"whitelistedittext" => "Sie müssen sich [[Spezial:Userlogin|hier anmelden]] um Artikel bearbeiten zu können.",
-"whitelistreadtitle" => "Zum Lesen ist es erforderlich angemeldet zu sein",
-"whitelistreadtext" => "Sie müssen sich [[Spezial:Userlogin|hier anmelden]] um Artikel lesen zu können.",
-"whitelistacctitle" => "Sie sind nicht berechtigt einen Account zu erzeugen",
-"whitelistacctext" => "Um in diesem Wiki Accounts anlegen zu dürfen müssen Sie sich [[Spezial:Userlogin|hier anmelden]] und die nötigen Berechtigungen haben.",
+"whitelistedittitle" => "Zum Bearbeiten ist es erforderlich, angemeldet zu sein",
+"whitelistedittext" => "Sie müssen sich [[Spezial:Userlogin|hier anmelden]], um Artikel bearbeiten zu können.",
+"whitelistreadtitle" => "Zum Lesen ist es erforderlich, angemeldet zu sein",
+"whitelistreadtext" => "Sie müssen sich [[Spezial:Userlogin|hier anmelden]], um Artikel lesen zu können.",
+"whitelistacctitle" => "Sie sind nicht berechtigt, einen Account zu erzeugen.",
+"whitelistacctext" => "Um in diesem Wiki Accounts anlegen zu dürfen, müssen Sie sich [[Spezial:Userlogin|hier anmelden]] und die nötigen Berechtigungen haben.",
 "loginreqtitle"	=> "Anmeldung erforderlich",
 'loginreqlink' => 'anmelden',
 "loginreqpagetext"	=> "Sie müssen sich $1, um andere Seiten betrachten zu können.",
