@@ -249,6 +249,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 146) List number of category members in Special:Categories
   (patch by Joel Nothman)
 * (bug 4061) Update of Slovene namespace names (LanguageSl.php)
+* (bug 4064) LanguageDe comma changes
 
 
 === Caveats ===
